demos/demo-3/90-vizualizer-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vizualizer
  labels:
    role: vizualizer
