demos/demo-3/11-producer-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: backend
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: fun-facts
      role: producer
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: fun-facts
        role: producer
    spec:
      containers:
      - name: producer-cont
        image: shekeriev/k8s-producer:extra
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: vizualizer-cont
        image: shekeriev/viz-ag
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: backend
  labels:
    app: fun-facts
    role: producer
spec:
  type: ClusterIP
  ports:
  - name: "web"
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: "viz"
    port: 9090
    targetPort: 5000
  selector:
    app: fun-facts
    role: producer
