demos/demo-3/31-observer-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: observer
  namespace: client
  labels:
    role: observer
spec:
  containers:
  - name: observer-cont
    image: alpine
    command: ["sleep", "1d"]
  - name: vizualizer-cont
    image: shekeriev/viz-ag
    imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: observer
  namespace: client
spec:
  ports:
  - port: 9090
    targetPort: 5000
  selector:
    role: observer
