demos/demo-3/91-vizualizer-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: vizualizer-svc 
  namespace: vizualizer
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
  selector:
    role: vizualizer 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizualizer
  namespace: vizualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      role: vizualizer
  template:
    metadata:
      labels:
        role: vizualizer
    spec:
      containers:
      - name: vizualizer-ui 
        image: shekeriev/viz-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        configMap:
          name: vizualizer-cm
